Accept candidate implemented
